--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "@babel/preset-react": "^7.16.7",
     "antd": "^4.19.5",
     "babel-loader": "^8.2.4",
-    "less": "^4.1.2",
-    "less-loader": "^10.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "webpack": "^5.70.0",
@@ -44,6 +42,7 @@
     "sass": "^1.49.10",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
     "webpack-dev-server": "^4.7.4"
   }
 }
